--- a/scss/config/util/_text.scss
+++ b/scss/config/util/_text.scss
@@ -1,3 +1,7 @@
+h2 {
+  font-size: 2.5rem;
+}
+
 a {
   text-decoration: underline;
 
@@ -7,6 +11,10 @@ a {
     vertical-align: top;
     color: rgba(#FFF, .5);
     display: inline-block;
+
+    @media print {
+      content: "";
+    }
   }
 
   &:hover, &:focus {
