--- a/views/parts/access-tokens/create.phtml
+++ b/views/parts/access-tokens/create.phtml
@@ -2,7 +2,7 @@
 
 <section class="access-tokens">
   <div class="row center-x">
-    <form class="col edit-access-token" method="POST" action="">
+    <form class="col" method="POST" action="">
       <div class="row">
         <div class="col center-x">
           <h2>Create access token</h2>
