--- a/scss/views/access-tokens.scss
+++ b/scss/views/access-tokens.scss
@@ -31,6 +31,14 @@ section.access-tokens {
       column-gap: 1rem;
     }
 
+    a.copy-token {
+      cursor: pointer;
+
+      &:hover, &:focus {
+        color: rgba(#FFF, .75);
+      }
+    }
+
     a.table-action, a.access-tokens-action {
       text-decoration: none;
       white-space: pre-wrap;
