--- a/views/home.phtml
+++ b/views/home.phtml
@@ -146,7 +146,7 @@
             <div class="col">
               <div class="row">
                 <div class="col">
-                  <h3><span class="hl-red">HBO Bachelor</span> / <span class="hl-white">HBO-ICT</span> / <span class="hl-green">Software engineering</span></h3>
+                  <h3><span class="hl-red">HBO Bachelor</span> / <span class="hl-white">HBO-ICT</span> / <span class="hl-green">Software Engineering</span></h3>
 
                   <h3 class="hl-purple">De Haagse Hogeschool</h3>
                 </div>
@@ -263,29 +263,6 @@
       <div class="row">
         <div class="col items">
           <div class="row item-head">
-            <div class="col time">2024</div>
-
-            <div class="col">
-              <div class="row">
-                <div class="col">
-                  <h3><span class="hl-red">Afstudeerder</span> / <span class="hl-green">Info Support</span></h3>
-
-                  <h3 class="hl-purple">Veenendaal</h3>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col">
-                  <ul class="list">
-                    <li>HBO afstudeeropdracht</li>
-                    <li>Maken van een berichtenmonitor applicatie voor een klant van Info Support</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row item-head">
             <div class="col time">2023 - heden</div>
 
             <div class="col">
@@ -302,6 +279,29 @@
                   <ul class="list">
                     <li>Verder ontwikkelen van het systeem uit de stage opdracht</li>
                     <li>Het beheren van het systeem en de database</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row item-head">
+            <div class="col time">2024</div>
+
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <h3><span class="hl-red">Afstudeerder</span> / <span class="hl-green">Info Support</span></h3>
+
+                  <h3 class="hl-purple">Veenendaal</h3>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col">
+                  <ul class="list">
+                    <li>HBO afstudeeropdracht</li>
+                    <li>Maken van een berichtenmonitor applicatie voor een klant van Info Support</li>
                   </ul>
                 </div>
               </div>
