--- a/views/home.phtml
+++ b/views/home.phtml
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="col image f-0" aria-label="Profiel foto van Iwan van der Wal">
+    <div class="col image f-0" role="img" aria-label="Profiel foto van Iwan van der Wal">
       <?= AppController::svg('pf') ?>
     </div>
   </div>
