Fix for large image causing slow page load

--- a/scss/views/home.scss
+++ b/scss/views/home.scss
@@ -270,7 +270,7 @@ section.home {
       div.image {
         display: flex;
 
-        > svg {
+        > img {
           width: 12rem;
           filter: drop-shadow(0 0 .25rem rgba(#000, .25));
 
