More meta keywords

--- a/views/parts/index/meta.phtml
+++ b/views/parts/index/meta.phtml
@@ -10,7 +10,7 @@
 
 <!-- Description and keywords -->
 <meta name="description" content="Mijn curriculum vitae website!">
-<meta name="keywords" content="cv, curriculum vitae">
+<meta name="keywords" content="iwan, van der wal, iwan van der wal, cv, curriculum vitae">
 
 <!-- Theme color -->
 <meta name="theme-color" content="#224466">
