--- a/views/home.phtml
+++ b/views/home.phtml
@@ -263,7 +263,31 @@
       <div class="row">
         <div class="col items">
           <div class="row item-head">
-            <div class="col time">2023 - heden</div>
+            <div class="col time">2024 - heden</div>
+
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <h3><span class="hl-red">Full-stack Developer</span> / <span class="hl-green">Lumera (AxyWare)</span></h3>
+
+                  <h3 class="hl-purple">Utrecht</h3>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col">
+                  <ul class="list">
+                    <li>Het ontwikkelen van een SaaS administratie systeem voor de klanten van Lumera (AxyWare)</li>
+                    <li>Focus op het ontwikkelen van webportals voor klanten en klanten van de klanten</li>
+                    <li>Werken met C#, .NET (Framwork en Core), Blazor, HTML, CSS, JavaScript en MS SQL</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row item-head">
+            <div class="col time">2023 - 2024</div>
 
             <div class="col">
               <div class="row">
