Betere vaardigheden indeling en een paar kleine fixes

--- a/scss/config/util/_text.scss
+++ b/scss/config/util/_text.scss
@@ -5,6 +5,10 @@ h2 {
 a {
   text-decoration: underline;
 
+  @media print {
+    text-decoration: none;
+  }
+
   &[target=_blank]::after {
     content: "🡵";
     font-size: .5rem;
