--- a/views/home.phtml
+++ b/views/home.phtml
@@ -393,7 +393,7 @@
         <div class="col items">
           <div class="row">
             <div class="col text">
-              <div class="row item-head">
+              <div class="row">
                 <div class="col">
                   <h3><span class="hl-purple">Programmeertalen</span></h3>
                 </div>
@@ -401,55 +401,55 @@
 
               <div class="row">
                 <div class="col">
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">HTML</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2017-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">CSS</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2017-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">PHP</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2018-07-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">JavaScript</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2019-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">C# (.NET)</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2019-07-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Sass</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2019-07-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Python</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2020-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Java</div>
                     <div class="col hl-white">3 Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">x86 Assembly</div>
                     <div class="col hl-white">1 Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
@@ -461,7 +461,7 @@
 
           <div class="row">
             <div class="col text">
-              <div class="row item-head">
+              <div class="row">
                 <div class="col">
                   <h3><span class="hl-green">Frameworks en tools</span></h3>
                 </div>
@@ -469,43 +469,43 @@
 
               <div class="row">
                 <div class="col">
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Git</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2018-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Laravel</div>
                     <div class="col hl-white">4 Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Blazor</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2022-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">LINQ</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2021-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Entity Framework</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2021-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Composer</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2021-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">NPM</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2020-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
@@ -518,38 +518,38 @@
           <div class="row">
             <div class="col text">
               <div class="row">
-                <div class="col item-head">
+                <div class="col">
                   <h3><span class="hl-red">Database en infrastructuur</span></h3>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col">
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">MySql</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2019-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">MS SQL</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2020-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Apache</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2019-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Azure</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2022-07-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Docker</div>
                     <div class="col hl-white">1 Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
@@ -562,32 +562,32 @@
           <div class="row">
             <div class="col text">
               <div class="row">
-                <div class="col item-head">
+                <div class="col">
                   <h3><span class="hl-yellow">Overige technieken</span></h3>
                 </div>
               </div>
 
               <div class="row">
                 <div class="col">
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">SCRUM</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2020-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">DevOps</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2022-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Windows CLI</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2018-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
                   </div>
 
-                  <div class="row item-head">
+                  <div class="row">
                     <div class="col hl-white">Linux CLI</div>
                     <div class="col hl-white"><?= AppController::yearsSince('2019-01-01') ?> Jaar</div>
                     <div class="col hl-yellow"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
